# RecorderUsingApiOpenCV

./: Audio.qml  CMakeLists.txt  Main.qml  Player.qml  Sidebar.qml  Video.qml  audiorecorder.cpp  filemanager.cpp  filemanager.h  main.cpp  videorecorder.cpp  videorecorder.h
